--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/developerwill/3rd-partiy-libs-and-TS#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "clean-webpack-plugin": "^4.0.0",
+    "lodash": "^4.17.21",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
